Updated name as total_SAT

--- a/nyc-school-scores-analysis.ipynb
+++ b/nyc-school-scores-analysis.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,40 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                           school_name  total_score\n",
-      "88                              Stuyvesant High School         2144\n",
-      "170                       Bronx High School of Science         2041\n",
-      "93                 Staten Island Technical High School         2041\n",
-      "174  High School of American Studies at Lehman College         2013\n",
-      "333                        Townsend Harris High School         1981\n",
-      "365  Queens High School for the Sciences at York Co...         1947\n",
-      "5                       Bard High School Early College         1914\n",
-      "280                     Brooklyn Technical High School         1896\n",
-      "45                       Eleanor Roosevelt High School         1889\n",
-      "68   High School for Mathematics, Science, and Engi...         1889\n"
+      "                                           school_name  total_SAT\n",
+      "88                              Stuyvesant High School       2144\n",
+      "170                       Bronx High School of Science       2041\n",
+      "93                 Staten Island Technical High School       2041\n",
+      "174  High School of American Studies at Lehman College       2013\n",
+      "333                        Townsend Harris High School       1981\n",
+      "365  Queens High School for the Sciences at York Co...       1947\n",
+      "5                       Bard High School Early College       1914\n",
+      "280                     Brooklyn Technical High School       1896\n",
+      "45                       Eleanor Roosevelt High School       1889\n",
+      "68   High School for Mathematics, Science, and Engi...       1889\n"
      ]
     }
    ],
    "source": [
     "# Create new column to store total scores\n",
-    "schools['total_score'] = (\n",
+    "schools['total_SAT'] = (\n",
     "    schools['average_math'] + \n",
     "    schools['average_reading'] + \n",
     "    schools['average_writing']\n",
     ")\n",
     "\n",
-    "# Select the columns 'school_name' and 'total_score'\n",
-    "top_10_schools = schools[['school_name', 'total_score']]\n",
+    "# Select the columns 'school_name' and 'total_SAT'\n",
+    "top_10_schools = schools[['school_name', 'total_SAT']]\n",
     "\n",
-    "# Sort by 'total_score' in descending order\n",
-    "top_10_schools = top_10_schools.sort_values(by='total_score', ascending=False)\n",
+    "# Sort by 'total_SAT' in descending order\n",
+    "top_10_schools = top_10_schools.sort_values(by='total_SAT', ascending=False)\n",
     "\n",
     "# Select only top 10 schools\n",
     "top_10_schools = top_10_schools.head(10)\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +177,8 @@
     "# Group schools by borough\n",
     "grouped_by_borough = schools.groupby('borough')\n",
     "\n",
-    "# Calculate the standard deviation of 'total_score' of each borough\n",
-    "std_by_borough = grouped_by_borough['total_score'].std()\n",
+    "# Calculate the standard deviation of 'total_SAT' of each borough\n",
+    "std_by_borough = grouped_by_borough['total_SAT'].std()\n",
     "\n",
     "# Identify the borough with largest std\n",
     "largest_std_borough = std_by_borough.idxmax()\n",
@@ -188,8 +188,8 @@
     "\n",
     "# Calculate the number of schools, average SAT, and standard deviation for that borough\n",
     "num_schools = filtered_borough_data['borough'].count()\n",
-    "average_SAT = filtered_borough_data['total_score'].mean()\n",
-    "std_SAT = filtered_borough_data['total_score'].std()\n",
+    "average_SAT = filtered_borough_data['total_SAT'].mean()\n",
+    "std_SAT = filtered_borough_data['total_SAT'].std()\n",
     "\n",
     "# Round the numeric values to two decimal places\n",
     "num_schools = round(num_schools, 2)\n",
